<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Property DODO</string>
    <string name="body">THIS IS SCROLLABLE</string>
    <string name="filter">Filters</string>
    <string name="rent">Rent</string>
    <string name="buy">Buy</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="saved">Saved Properties</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
    <string name="reset">Reset</string>
    <string name="commercial">Commercial</string>
    <string name="residential">Residential</string>
    <string name="sale">Sale</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

    <!-- Color UNI Codes-->
    <string name="icon_heart">&#xf004;</string>
    <string name="icon_search">&#xf002;</string>
    <string name="icon_setting">&#xf085;</string>
    <string name="icon_map">&#xf279;</string>
    <string name="icon_list">&#xf0ca;</string>
    <string name="icon_bed">&#xf236;</string>
    <string name="icon_bath">&#xf2cd;</string>
    <string name="icon_back">&#xf060;</string>
    <string name="icon_share">&#xf14d;</string>
    <string name="icon_call">&#xf095;</string>
    <string name="icon_email">&#xf075;</string>
    <string name="icon_sms">&#xf0e0;</string>
    <string name="icon_cross">&#xf00d;</string>

    <!-- Array for drop down values test-->
    <string name="choose">Choose</string>

    <string-array name="dropDown">
        <item>filter1</item>
        <item>filter2</item>
        <item>filter3</item>
    </string-array>

    <string-array name="bedDropDown">
        <item>Bed From</item>
        <item>1 Bed</item>
        <item>2 Beds</item>
        <item>3 Beds</item>
        <item>4 Beds</item>
        <item>5 Beds</item>
        <item>6 Beds</item>
        <item>7 Beds</item>
    </string-array>

    <string-array name="AreaFromDropDown">
        <item>Area From</item>
        <item>500 sq.ft.</item>
        <item>700 sq.ft.</item>
        <item>800 sq.ft.</item>
        <item>900 sq.ft.</item>
        <item>1,000 sq.ft.</item>
        <item>1,100 sq.ft.</item>
        <item>1,200 sq.ft.</item>
        <item>1,300 sq.ft.</item>
        <item>1,400 sq.ft.</item>
        <item>1,500 sq.ft.</item>
        <item>1,600 sq.ft.</item>
        <item>1,800 sq.ft.</item>
        <item>2,000 sq.ft.</item>
        <item>2,200 sq.ft.</item>
        <item>2,400 sq.ft.</item>
        <item>2,600 sq.ft.</item>
        <item>2,800 sq.ft.</item>
        <item>3,000 sq.ft.</item>
        <item>3,200 sq.ft.</item>
        <item>3,400 sq.ft.</item>
        <item>3,600 sq.ft.</item>
        <item>3,800 sq.ft.</item>
        <item>4,200 sq.ft.</item>
        <item>4,600 sq.ft.</item>
        <item>5,000 sq.ft.</item>
        <item>5,400 sq.ft.</item>
        <item>5,800 sq.ft.</item>
        <item>6,200 sq.ft.</item>
        <item>6,600 sq.ft.</item>
        <item>7,000 sq.ft.</item>
        <item>7,400 sq.ft.</item>
        <item>7,800 sq.ft.</item>
        <item>8,200 sq.ft.</item>
        <item>9,000 sq.ft.</item>
        <item>9,500 sq.ft.</item>
        <item>10,000 sq.ft.</item>
        <item>10,500 sq.ft.</item>
        <item>11,000 sq.ft.</item>
        <item>11,500 sq.ft.</item>
        <item>12,000 sq.ft.</item>
        <item>12,500 sq.ft.</item>
        <item>13,000 sq.ft.</item>
        <item>13,500 sq.ft.</item>
        <item>14,000 sq.ft.</item>
        <item>14,500 sq.ft.</item>
        <item>15,000 sq.ft.</item>
    </string-array>

    <string-array name="AreaToDropDown">
        <item>Area To</item>
        <item>500 sq.ft.</item>
        <item>700 sq.ft.</item>
        <item>800 sq.ft.</item>
        <item>900 sq.ft.</item>
        <item>1,000 sq.ft.</item>
        <item>1,100 sq.ft.</item>
        <item>1,200 sq.ft.</item>
        <item>1,300 sq.ft.</item>
        <item>1,400 sq.ft.</item>
        <item>1,500 sq.ft.</item>
        <item>1,600 sq.ft.</item>
        <item>1,800 sq.ft.</item>
        <item>2,000 sq.ft.</item>
        <item>2,200 sq.ft.</item>
        <item>2,400 sq.ft.</item>
        <item>2,600 sq.ft.</item>
        <item>2,800 sq.ft.</item>
        <item>3,000 sq.ft.</item>
        <item>3,200 sq.ft.</item>
        <item>3,400 sq.ft.</item>
        <item>3,600 sq.ft.</item>
        <item>3,800 sq.ft.</item>
        <item>4,200 sq.ft.</item>
        <item>4,600 sq.ft.</item>
        <item>5,000 sq.ft.</item>
        <item>5,400 sq.ft.</item>
        <item>5,800 sq.ft.</item>
        <item>6,200 sq.ft.</item>
        <item>6,600 sq.ft.</item>
        <item>7,000 sq.ft.</item>
        <item>7,400 sq.ft.</item>
        <item>7,800 sq.ft.</item>
        <item>8,200 sq.ft.</item>
        <item>9,000 sq.ft.</item>
        <item>9,500 sq.ft.</item>
        <item>10,000 sq.ft.</item>
        <item>10,500 sq.ft.</item>
        <item>11,000 sq.ft.</item>
        <item>11,500 sq.ft.</item>
        <item>12,000 sq.ft.</item>
        <item>12,500 sq.ft.</item>
        <item>13,000 sq.ft.</item>
        <item>13,500 sq.ft.</item>
        <item>14,000 sq.ft.</item>
        <item>14,500 sq.ft.</item>
        <item>15,000 sq.ft.</item>
    </string-array>


    <string name="Price">Choose</string>

    <string-array name="priceDropDown">
        <item>Unknown</item>
        <item>AED 0</item>
        <item>AED 20,000</item>
        <item>AED 30,000</item>
        <item>AED 40,000</item>
        <item>AED 50,000</item>
        <item>AED 60,000</item>
        <item>AED 70,000</item>
        <item>AED 80,000</item>
        <item>AED 90,000</item>
        <item>AED 100,000</item>
        <item>AED 120,000</item>
        <item>AED 140,000</item>
        <item>AED 160,000</item>
        <item>AED 180,000</item>
        <item>AED 200,000</item>
        <item>AED 250,000</item>
        <item>AED 300,000</item>
        <item>AED 350,000</item>
        <item>AED 400,000</item>
        <item>AED 450,000</item>
        <item>AED 500,000</item>
        <item>AED 600,000</item>
        <item>AED 700,000</item>
        <item>AED 800,000</item>
        <item>AED 900,000</item>
        <item>AED 1,000,000</item>
        <item>AED 2,000,000</item>
        <item>AED 3,000,000</item>
        <item>AED 4,000,000</item>
        <item>AED 5,000,000</item>
        <item>AED 6,000,000</item>
        <item>AED 7,000,000</item>
        <item>AED 8,000,000</item>
        <item>AED 9,000,000</item>
        <item>AED 10,000,000</item>
        <item>AED 12,000,000</item>
        <item>AED 14,000,000</item>
        <item>AED 16,000,000</item>
        <item>AED 18,000,000</item>
        <item>AED 20,000,000</item>
        <item>AED 30,000,000</item>
        <item>AED 40,000,000</item>
        <item>AED 50,000,000</item>
        <item>AED 100,000,000</item>
        <item>AED 200,000,000</item>
        <item>AED 300,000,000</item>
    </string-array>

</resources>