<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <!-- Header Start-->
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:background="@drawable/border_top"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top">

            <android.support.v7.widget.SearchView
                android:layout_width="@dimen/_235sdp"
                android:layout_height="@dimen/_30sdp"
                android:background="#e7e7e7"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"
                >

            </android.support.v7.widget.SearchView>
            <Space
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"/>
            <Button
                android:id="@+id/btnFilter"
                android:layout_width="@dimen/_58sdp"
                android:layout_height="@dimen/_32sdp"
                android:text="@string/filter"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:background="@null"
                android:onClick="buttonFilter"
                android:layout_marginEnd="@dimen/_7sdp"
                android:layout_marginRight="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_4sdp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom">

            <Button
                android:id="@+id/btnRent"
                android:layout_width="@dimen/_140sdp"
                android:layout_height="@dimen/_22sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:background="@drawable/border_button"
                android:onClick="buttonRent"
                android:text="@string/rent"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"/>

            <Button
                android:id="@+id/btnBuy"
                android:layout_width="@dimen/_140sdp"
                android:layout_height="@dimen/_22sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:background="@drawable/border_button"
                android:onClick="buttonBuy"
                android:text="@string/buy"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"/>
        </LinearLayout>
    </RelativeLayout>
    <!-- Header End-->


    <!-- Footer Start-->
    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/border_bottom"
        android:gravity="center"
        android:layout_gravity="center">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            >

            <Button
                android:id="@+id/btnSearch"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="match_parent"
                android:onClick="buttonSearch"
                android:text="@string/icon_search"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"
                style="?android:attr/buttonBarButtonStyle"
                />

            <Button
                android:id="@+id/btnSaved"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="match_parent"
                android:text="@string/icon_heart"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_20sdp"
                android:onClick="buttonSaved"
                android:layout_marginLeft="@dimen/_85sdp"
                android:layout_marginStart="@dimen/_85sdp"
                style="?android:attr/buttonBarButtonStyle"
                />

            <Button
                android:id="@+id/btnSettings"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="match_parent"
                android:text="@string/icon_setting"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_20sdp"
                android:onClick="buttonSettings"
                android:layout_marginLeft="@dimen/_70sdp"
                android:layout_marginStart="@dimen/_70sdp"
                style="?android:attr/buttonBarButtonStyle"
                />

        </LinearLayout>
    </RelativeLayout>
    <!-- Footer End-->


    <!-- Body Start-->
    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/header"
        android:fillViewport="true">
        <LinearLayout
            android:id="@+id/myLayout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorSecondary"
            android:fillViewport="true">

            <!--Container for Fragments-->
            <FrameLayout
                android:id="@+id/fragment_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorSecondary">

            </FrameLayout>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/ListView">

            </ListView>
        </LinearLayout>
    </ScrollView>



    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="@dimen/_65sdp"
        android:layout_marginEnd="@dimen/_11sdp"
        android:layout_marginRight="@dimen/_11sdp">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btnMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonMap"
            android:background="@drawable/border_button"
            app:backgroundTint="@color/colorSecondary"
            />

        <TextView
            android:id="@+id/txtMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/icon_map"
            android:textSize="@dimen/_25sdp"
            android:elevation="@dimen/_14sdp"
            android:textColor="@color/colorPrimary"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </FrameLayout>
    <!---->

    <FrameLayout
        android:id="@+id/fragment_container_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorSecondary"
        >
    </FrameLayout>

</RelativeLayout>
    <!-- Body End-->
